[project]
name = "damsan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tu Cuong To", email = "totucuong@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "pinecone-client>=6.0.0",
    "sentence-transformers>=5.1.1",
]

[project.scripts]
damsan = "damsan:main"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
