[project]
name = "damsan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tu Cuong To", email = "totucuong@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.34",
    "rank-bm25>=0.2.2",
]

[project.scripts]
damsan = "damsan:main"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "marimo[recommended]>=0.16.5",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
