[project]
name = "damsan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tu Cuong To", email = "totucuong@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "fastapi>=0.115.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-openai>=0.3.34",
    "openai>=2.1.0",
    "pydantic-settings>=2.6.0",
    "rank-bm25>=0.2.2",
    "uvicorn[standard]>=0.32.0",
    "xmltodict>=1.0.2",
]

[project.scripts]
damsan = "damsan:main"

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "httpx>=0.27.2",
    "marimo[recommended]>=0.16.5",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.8.0",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
